Aligned the log message icons and counter at the top (related to issue 6834)

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -71,7 +71,6 @@
     padding-left:2px;
     width: 20px;
     display: table-cell;
-    vertical-align: middle;
 }
 
 .logRow-group > div > .logCounter,
@@ -114,7 +113,7 @@
 .logRow-loading,
 .logRow-errorMessage {
     background-repeat: no-repeat;
-    background-position: 4px center;
+    background-position: 4px 4px;
 }
 
 .logRow-assert,
